feat: our team page

--- a/webcomics/templates/components/header.html
+++ b/webcomics/templates/components/header.html
@@ -54,5 +54,5 @@
 </header>
 
 {% block extra_js %}
-<script src="{% static "/js/header.js" %}"></script>
+<script src="{% static "js/header.js" %}"></script>
 {% endblock %}
