--- a/webcomics/static/css/about.css
+++ b/webcomics/static/css/about.css
@@ -53,37 +53,54 @@
     background: darkred;
 }
 
-.team-member {
-    padding-top: 20px;
+.team-container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
+    padding: 20px;
+}
+
+.team-member {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin: 10px;
+    padding: 20px;
+    text-align: center;
+    width: 250px;
 }
 
 .team-member img {
-    max-width: 275px;
-    border: 5px solid black;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
 }
 
-.text-box {
-    text-align: left;
+.team-member h3 {
+    margin: 10px 0 5px;
 }
 
-@media screen and (min-width: 992px) {
+.team-member p {
+    margin: 5px 0;
+}
+
+.social-icons {
+    margin-top: 20px;
+    font-size: 20px;
+}
+
+.social-icons a {
+    margin: 0 5px;
+    text-decoration: none;
+}
+
+.social-icons img {
+    width: 24px;
+    height: 24px;
+}
+
+@media (max-width: 600px) {
     .team-member {
-        flex-direction: row;
-        align-items: flex-start;
-        text-align: center;
-    }
-
-    .team-member img {
-        max-width: 275px;
-        margin-right: 20px;
-    }
-
-    .text-box {
-    text-align: center;
+        width: 90%;
     }
 }
