--- a/webcomics/static/css/about.css
+++ b/webcomics/static/css/about.css
@@ -1,58 +1,3 @@
-.hero {
-    position: relative;
-    background-image: url('../src/backgrounds/background.jpg');
-    background-size: cover;
-    background-position: top;
-    height: 60vh;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    color: white;
-    z-index: 1;
-}
-
-.hero::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.85);
-}
-
-.hero-content {
-    position: relative;
-    padding: 0 15px 0 15px;
-    z-index: 2;
-}
-
-.hero h1 {
-    font-family: NikkyouSans;
-    font-size: 3rem;
-    margin: 0;
-}
-
-.hero p {
-    font-size: 1.5rem;
-    margin: 20px 0;
-}
-
-.hero .btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background: red;
-    color: white;
-    text-decoration: none;
-    font-size: 1.2rem;
-    border-radius: 5px;
-    transition: background 0.3s;
-}
-
-.hero .btn:hover {
-    background: darkred;
-}
-
 .team-container {
     display: flex;
     flex-wrap: wrap;
@@ -77,6 +22,7 @@
 }
 
 .team-member h3 {
+    font-family: surchaing;
     margin: 10px 0 5px;
 }
 
