--- a/webcomics/templates/help.html
+++ b/webcomics/templates/help.html
@@ -14,7 +14,7 @@
 {% block  content %}
 <div id="main-container" class="container" style="padding: 20px 0 20px 0">
     <div class="main-content">
-    <h1>NUESTRO EQUIPO</h1>
+    <h1>AYUDA</h1>
     </div>
 </div>
 {% endblock %}
