--- a/webcomics/templates/index.html
+++ b/webcomics/templates/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="hero" style="height: 100vh; background-image: url('{% static 'images/logo/REYYEYR.gif' %}');">
+    <div class="hero" style="height: 100vh; background-image: url('{% static 'images/logo/REYYEYR.gif' %}')">
         <div class="hero-content container">
             <h1>vive experiencias<br> únicas y derivadas</h1>
             <p>Encajando en nuestra sociedad, no por obligación, sino por gusto.</p>
