--- a/webcomics/static/css/about.css
+++ b/webcomics/static/css/about.css
@@ -3,16 +3,18 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 20px;
+    padding-bottom: 5rem;
 }
 
 .team-member {
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     margin: 10px;
     padding: 20px;
     text-align: center;
     width: 250px;
+    height: 370px;
+    border: 0.5px solid #1d2021;
 }
 
 .team-member img {
@@ -32,17 +34,22 @@
 
 .social-icons {
     margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 20px;
 }
 
 .social-icons a {
     margin: 0 5px;
     text-decoration: none;
+    color: black;
 }
 
 .social-icons img {
     width: 24px;
     height: 24px;
+    color: black;
 }
 
 @media (max-width: 600px) {
