--- a/webcomics/static/css/style.css
+++ b/webcomics/static/css/style.css
@@ -15,9 +15,11 @@ h1, h2 {
 
 .main-content h1 {
     font-family: NikkyouSans;
-    text-align: center;
-    padding: 20px 0 20px 0;
+    text-align: left;
+    padding: 40px 0 10px
+    
 }
+
 
 #loading-screen {
     position: fixed;
@@ -46,153 +48,5 @@ h1, h2 {
     width: 900;
     height: 90px;
     background-color: #1d2021;
-    margin-top: 20px
-}
-
-header {
-    position: fixed;
-    width: 100%;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
-    transition: background 0.3s ease-in-out;
-    z-index: 20;
-}
-
-header.sticky {
-    background: #1d2021;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
-header.static {
-    background: #1d2021;
-    position: static;
-}
-
-#NavWrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-}
-
-nav {
-    font-family: NikkyouSans;
-}
-
-.dropdown-menu {
-    background-color: #282828;
-    color: white !important;
-}
-
-.dropdown-item {
-    color: white
-}
-
-.dropdown-item:hover {
-    color: #a370f7;
-    background-color: #1d2021;
-}
-
-.vermas a {
-    text-align: right;
-    font-size: 40px;
-}
-
-footer {
-    width: 100%;
-    background-color: #1d2021;
-}
-
-footer .group-a {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 50px;
-    padding: 45px 0;
-}
-
-footer .group-a .box img{
-    width: 100%;
-    height: 100%;
-    display: flex;
-}
-
-footer .group-a .box figure img {
-    width: 150px;
-}
-
-footer .group-a .box h2 {
-    font-family: NikkyouSans;
-    color: #fff;
-    margin-bottom: 25px;
-    font-size: 20px;
-}
-
-footer .group-a .box ul {
-    list-style: none;
-}
-
-footer .group-a .box p {
-    color: #efefef;
-    margin-bottom: 10px;
-}
-
-footer .group-a .box small {
-    color: #efefef;
-    margin-bottom: 10px;
-}
-
-footer .group-a .footer-link a:hover {
-    color: aqua;
-}
-
-@media screen and (max-width: 768px) {
-    header {
-        position: static;
-        background: #1d2021
-    }
-
-    header.sticky {
-        position: static;
-        background: #1d2021
-    }
-
-    #NavMenu {
-        text-align: center;
-    }
-    
-    #NavWrapper {
-        flex-direction: column;
-        align-items: center;
-        margin: 0 0 0 0;
-        width: 100%;
-        max-width: 100%;
-    }
-
-    #Icons {
-        order: 2;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-    }
-}
-
-@media screen and (max-width:800px){
-    footer .group-a {
-        width: 90%;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 30px;
-        padding: 35px 0;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    .container {
-        margin: 0 0 0 0;
-        width: 100%;
-        max-width: 100wv;
-    }
+    margin-top: 20px;
 }
